--- a/MVC5.WebApplication/Web.config
+++ b/MVC5.WebApplication/Web.config
@@ -13,7 +13,18 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
+    
+    
+    
+    <add key="ida:ClientId" value="f2aaa3f7-8108-4dfc-b275-ba8b91d6a57b" />
+    <add key="ida:AADInstance" value="https://login.microsoftonline.com/" />
+    <add key="ida:ClientSecret" value="" />
+    <add key="ida:Domain" value="CIECOM386698.onmicrosoft.com" />
+    <add key="ida:TenantId" value="24ed6fd7-3261-4235-af38-d0367ee5c245" />
+    <add key="ida:PostLogoutRedirectUri" value="https://localhost:44354/" />
+    
+    
+    
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
